<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name_tag"
                android:id="@+id/first_name_label"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@color/editTextBackground"
                android:id="@+id/first_name_text"
                android:textSize="@dimen/basic_text_size"
                android:inputType="textCapSentences"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_tag"
                android:id="@+id/last_name_label"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@color/editTextBackground"
                android:id="@+id/last_name_text"
                android:textSize="@dimen/basic_text_size"
                android:inputType="textCapSentences"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major_tag"
                android:id="@+id/major_label"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@color/editTextBackground"
                android:id="@+id/major_text"
                android:textSize="@dimen/basic_text_size"
                android:inputType="textCapSentences"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_year_tag"
            android:id="@+id/class_year_label"
            android:textSize="@dimen/basic_text_size"
            android:layout_marginTop="@dimen/vertical_text_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@color/editTextBackground"
                android:id="@+id/class_year_text"
                android:textSize="@dimen/basic_text_size"
                android:inputType="phone"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_tag"
                android:id="@+id/email_label"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@color/editTextBackground"
                android:id="@+id/email_text"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="@dimen/submit_button_height"
                android:text="@string/submit"
                android:onClick="updateData"
                android:textSize="@dimen/button_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>