<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="com.math497.app.MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name_tag"
                android:id="@+id/first_name_label"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/first_name_text"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name_tag"
                android:id="@+id/last_name_label"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/last_name_text"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major_tag"
                android:id="@+id/major_label"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/major_text"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_year_tag"
                android:id="@+id/class_year_label"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/class_year_text"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_tag"
                android:id="@+id/email_label"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email_text"
                android:textSize="@dimen/basic_text_size"
                android:layout_marginTop="@dimen/vertical_text_margin"
                android:layout_marginBottom="@dimen/vertical_text_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </FrameLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>

